# GTD

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yaml
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  hello.cpp
